--- a/css/style.css
+++ b/css/style.css
@@ -49,7 +49,7 @@ NEW PAGE START
   font-size: 1rem;
   font-weight: 700;
   line-height: inherit;
-  color: #ffffffa4;
+  color: #03327d;
   text-transform: uppercase;
 }
 
@@ -191,10 +191,11 @@ h6 {
 header {
   text-align: center;
   color: #fff;
-  background-image: url(/img/piotr-skrzynski-6o4-w8sdcuU-unsplash.jpg);
+  background-image: url(/img/PossBg.jpeg);
   background-attachment: scroll;
-  -webkit-background-size: cover;
   -moz-background-size: cover;
+  background-position: center top;
+  background-size: 69%;
 }
 
 header .intro-text {
@@ -221,7 +222,7 @@ header .intro-text .intro-heading {
 
 @media (min-width: 768px) {
   header .intro-text {
-    padding-top: 300px;
+    padding-top: 275px;
     padding-bottom: 200px;
   }
 
@@ -575,13 +576,17 @@ section h3.section-subheading {
 
 .team-member img {
   margin: 0 auto;
-  border: 7px solid #fff;
+  border: 10px solid #f1f5f8;
+  width: 100%;
+  height: 375px;
+  box-shadow: 5px 5px 10px #dedfdf, -5px -5px 10px #ffffff;
+  border-radius: 20%;
 }
 
 .team-member h4 {
   margin-top: 25px;
   margin-bottom: 0;
-  text-transform: none;
+  text-transform: none; 
 }
 
 .team-member p {
@@ -590,9 +595,10 @@ section h3.section-subheading {
 
 section#contact {
   background-color: #222;
-  background-image: url(https://unsplash.imgix.net/44/C3EWdWzT8imxs0fKeKoC_blackforrest.JPG?q=75&fm=jpg&auto=format&s=986aaa92169d4e97975fa66ebd60bafd);
+  background-image: url(/img/contactus.jpeg);
   background-position: center;
-  background-repeat: no-repeat;
+  background-position: center;
+  
 }
 
 section#contact .section-heading {
@@ -678,17 +684,15 @@ footer ul.quicklinks {
 
 .icons {
   text-decoration: none;
-  width: 250px;
-  height: 250px;
-  background-color: #f1f5f8;
-  color: #03327d;
+  width: 25vh;
+  height: 25vh;
+  background-color: #c6a37d;
+  color: #ffffff;
   border-radius: 50%;
   display: flex;
   align-items: center;
   justify-content: center;
-  box-shadow:
-  5px 5px 10px #dbdbdb,
-  -5px -5px 10px #ffffff;
+  box-shadow: 5px 5px 10px #836d57, -5px -5px 10px #836d57;
   
 }
 
@@ -1039,8 +1043,8 @@ label.color-6 {
 
 .img-wrap {
   position: absolute;
-  top: 100px;
-  left: 0;
+  top: 150px;
+  left: -50px;
   width: 500px;
   height: 410px;
   display: inline-block;
@@ -1050,7 +1054,7 @@ label.color-6 {
   background-position: center top;
   background-size: 100%;
   background-repeat: no-repeat;
-  background-image: url("https://assets.codepen.io/1462889/ch1.png");
+  background-image: url(/img/producttable1.png);
   opacity: 0;
 }
 .for-color-1:checked ~ .img-wrap.chair-1 {
@@ -1058,35 +1062,35 @@ label.color-6 {
   animation: shake 0.7s cubic-bezier(0.36, 0.07, 0.19, 0.97) both;
 }
 .img-wrap.chair-2 {
-  background-image: url("https://assets.codepen.io/1462889/ch2.png");
+  background-image: url(/img/producttable2.png);
 }
 .for-color-2:checked ~ .img-wrap.chair-2 {
   opacity: 1;
   animation: shake 0.7s cubic-bezier(0.36, 0.07, 0.19, 0.97) both;
 }
 .img-wrap.chair-3 {
-  background-image: url("https://assets.codepen.io/1462889/ch3.png");
+  background-image: url(/img/producttable3.png);
 }
 .for-color-3:checked ~ .img-wrap.chair-3 {
   opacity: 1;
   animation: shake 0.7s cubic-bezier(0.36, 0.07, 0.19, 0.97) both;
 }
 .img-wrap.chair-4 {
-  background-image: url("https://assets.codepen.io/1462889/ch4.png");
+  background-image: url(/img/producttable4.png);
 }
 .for-color-4:checked ~ .img-wrap.chair-4 {
   opacity: 1;
   animation: shake 0.7s cubic-bezier(0.36, 0.07, 0.19, 0.97) both;
 }
 .img-wrap.chair-5 {
-  background-image: url("https://assets.codepen.io/1462889/ch5.png");
+  background-image: url(/img/producttable5.png);
 }
 .for-color-5:checked ~ .img-wrap.chair-5 {
   opacity: 1;
   animation: shake 0.7s cubic-bezier(0.36, 0.07, 0.19, 0.97) both;
 }
 .img-wrap.chair-6 {
-  background-image: url("https://assets.codepen.io/1462889/ch6.png");
+  background-image: url(/img/producttable6.png);
 }
 .for-color-6:checked ~ .img-wrap.chair-6 {
   opacity: 1;
@@ -1188,7 +1192,7 @@ h5 {
 
 .desc-sec {
   padding-top: 20px;
-  padding-bottom: 30px;
+  padding-bottom: 8vw;
   transition: all 250ms linear;
   opacity: 0;
   overflow: hidden;
@@ -1252,6 +1256,8 @@ h5 {
   transition: all 250ms linear;
   text-decoration: none;
   margin-top: 50px;
+  border: inset;
+    border-width: thin;
 }
 .icon {
   padding-right: 7px;
@@ -1269,8 +1275,9 @@ h5 {
   transition: background-color 250ms 300ms ease;
 }
 .btn:hover {
-  box-shadow: 0 12px 35px 0 rgba(16, 39, 112, 0.25);
-  background-color: #000;
+  box-shadow: 0 12px 35px 0 rgba(16, 38, 112, 0.138);
+  background-color: rgba(0, 0, 0, 0.428);
+  color: #ffffff;
 }
 .for-color-2:checked ~ .info-wrap .btn:before {
   background-color: #1a1a1a;
@@ -1703,15 +1710,16 @@ video {
 /*cards titles*/
 .card{
   position: relative;
-  width: 250px;
-  height: 250px;
+  width: 300px;
+  height: 300px;
   color: #03327d;
   background: url(./bg.jpg)
   center no-repeat;
   background-size: cover;
   border-radius: 20px;
   overflow: hidden;
-  
+  border: 1px solid #f1f5f8;
+  box-shadow: 5px 5px 10px #dbdbdb, -5px -5px 10px #ffffff;
 }
 
 .card__content{
