--- a/css/style.css
+++ b/css/style.css
@@ -42,7 +42,7 @@ NEW PAGE START
   align-items: center;
 }
 .header .navbar .menu-item:not(:first-child) {
-  margin-left: 2rem;
+  margin-left: 5rem;
 }
 .header .navbar .menu-item a {
   font-family: inherit;
@@ -195,7 +195,7 @@ header {
   background-attachment: scroll;
   -moz-background-size: cover;
   background-position: center top;
-  background-size: 69%;
+  background-size: 52%;
 }
 
 header .intro-text {
@@ -578,7 +578,6 @@ section h3.section-subheading {
   margin: 0 auto;
   border: 10px solid #f1f5f8;
   width: 100%;
-  height: 375px;
   box-shadow: 5px 5px 10px #dedfdf, -5px -5px 10px #ffffff;
   border-radius: 20%;
 }
@@ -686,13 +685,13 @@ footer ul.quicklinks {
   text-decoration: none;
   width: 25vh;
   height: 25vh;
-  background-color: #c6a37d;
-  color: #ffffff;
+  background-color: #f1f5f8;
+  color: #be9567;
   border-radius: 50%;
   display: flex;
   align-items: center;
   justify-content: center;
-  box-shadow: 5px 5px 10px #836d57, -5px -5px 10px #836d57;
+  box-shadow: 5px 5px 10px #c59b64, -5px -5px 10px #bf9f77;
   
 }
 
@@ -1710,8 +1709,8 @@ video {
 /*cards titles*/
 .card{
   position: relative;
-  width: 300px;
-  height: 300px;
+  width: 350px;
+  height: 350px;
   color: #03327d;
   background: url(./bg.jpg)
   center no-repeat;
@@ -1789,9 +1788,9 @@ video {
   top: 50%;
   transform: translateY(-50%)
   translateX(calc(100% + 4px));
-  width: 45px;
+  width: 49px;
   height: 45px;
-  background-color: red;
+  background-color: #ff0000f2;
   border-radius: 50px;
   transition: tranform .25s .25s
   cubic-bezier(0,0,.5,2), width .25s cubic-bezier(0,0,.5,2);
@@ -1815,4 +1814,122 @@ video {
 
 .cta:hover i {
   transform: translateX(3px);
+}
+
+
+/* :: card :: */
+.cards {
+  max-width: 850px;
+  width: 95%;
+  margin-inline: auto;
+  display: grid;
+  grid-template-columns: 1fr;
+  margin-bottom: 40px;
+  border-radius: 20px;
+}
+.cards__thumb {
+  overflow: hidden;
+  background-color: var(--grey);
+  border-radius: 20px;
+
+}
+.cards__thumb:hover img {
+  transform: scale(1.1);
+  border-radius: 20px;
+
+}
+.cards__content {
+  position: relative;
+  background-color: white;
+  padding: 45px;
+  text-align: center;
+  border-radius: 20px;
+}
+.cards__title {
+  font-family: var(--secondary-font);
+  margin-bottom: 20px;
+  font-size: 35px;
+  font-weight: 400;
+  border-radius: 20px;
+}
+
+.cards__title:hover {
+  color: var(--grey);
+}
+.cards__text {
+  font-family: var(--main-font);
+  color: var(--dark);
+  line-height: 25px;
+}
+.cards__btn {
+  border: none;
+  background: var(--dark);
+  color: white;
+  padding: 10px;
+  font-size: 18px;
+  position: absolute;
+  bottom: -20px;
+  left: 50%;
+  transform: translateX(-50%);
+}
+.cards__btn:focus-visible, .card__btn:focus, .cards__btn:active {
+  background-color: var(--grey);
+}
+
+/* :: utilities :: */
+.animate {
+  transition: all 0.3s ease;
+}
+
+/* :: mediaqueries :: */
+@media (min-width: 680px) {
+  .cards {
+    grid-template-columns: auto minmax(100px, 470px) auto;
+    grid-template-rows: repeat(2, 1fr) auto auto;
+  }
+  .cards__thumb {
+    max-width: 700px;
+    justify-self: center;
+    grid-area: 1/1/-2/-1;
+  }
+  .cards__content {
+    grid-area: 3/2/-1/-2;
+  }
+}
+@media (min-width: 900px) {
+  .cards {
+    grid-template-columns: auto 70px minmax(100px, 400px);
+    grid-template-rows: repeat(3, auto);
+  }
+  .cards:nth-child(even) {
+    grid-template-columns: minmax(100px, 400px) 70px auto;
+  }
+  .cards__thumb {
+    grid-area: 1/1/-1/3;
+  }
+  .cards:nth-child(even) .cards__thumb {
+    grid-area: 1/2/-1/-1;
+  }
+  .cards__content {
+    grid-area: 2/2/-2/-1;
+    text-align: left;
+  }
+  .cards:nth-child(even) .cards__content {
+    text-align: left;
+    grid-area: 2/1/-2/3;
+  }
+}
+
+img {
+  transition:transform 0.25s ease;
+}
+
+img:hover {
+  -webkit-transform:scale(1.05); /* or some other value */
+  transform:scale(1.05);
+}
+
+.imageContainers > img:hover {
+  width: 200px;
+  height: 200px;
 }
