--- a/css/style.css
+++ b/css/style.css
@@ -109,7 +109,7 @@ NEW PAGE START
   .header .navbar .nav-toggle {
     display: block;
     position: fixed;
-    right: 1rem;
+    right: 3rem;
     top: 1rem;
     width: 2.5rem;
     height: 2.5rem;
@@ -190,12 +190,7 @@ h6 {
 
 header {
   text-align: center;
-  color: #fff;
-  background-image: url(/img/PossBg.jpeg);
-  background-attachment: scroll;
-  -moz-background-size: cover;
-  background-position: center top;
-  background-size: 52%;
+  color: #14559c;
 }
 
 header .intro-text {
@@ -222,7 +217,7 @@ header .intro-text .intro-heading {
 
 @media (min-width: 768px) {
   header .intro-text {
-    padding-top: 275px;
+    padding-top: 250px;
     padding-bottom: 200px;
   }
 
@@ -235,7 +230,7 @@ header .intro-text .intro-heading {
   }
 
   header .intro-text .intro-heading {
-    margin-bottom: 50px;
+    margin-bottom: -10px;
     text-transform: uppercase;
     font-family: Montserrat, "Helvetica Neue", Helvetica, Arial, sans-serif;
     font-size: 75px;
@@ -659,7 +654,7 @@ section#contact .text-danger {
 }
 
 footer {
-  padding: 25px 0;
+  padding: 50px 0;
   text-align: center;
 }
 
@@ -683,8 +678,8 @@ footer ul.quicklinks {
 
 .icons {
   text-decoration: none;
-  width: 25vh;
-  height: 25vh;
+  width: 20vh;
+  height: 20vh;
   background-color: #f1f5f8;
   color: #be9567;
   border-radius: 50%;
@@ -843,131 +838,6 @@ Underline:hover{
 }
 
 
-/*Before and after image*/
-.beer-slider {
-  display: inline-block;
-  font-family: "Roboto", sans-serif;
-  letter-spacing: 1px;
-  overflow: hidden;
-  position: relative;
-  text-transform: uppercase;
-}
-.beer-slider img {
-  vertical-align: bottom;
-}
-.beer-slider > img {
-  height: auto;
-  max-width: 100%;
-}
-.beer-reveal {
-  bottom: 0;
-  left: 0;
-  opacity: 0;
-  overflow: hidden;
-  position: absolute;
-  right: 50%;
-  top: 0;
-  transition: opacity 0.35s;
-  z-index: 1;
-}
-.beer-reveal > :first-child {
-  max-width: none;
-  width: 200%;
-}
-.beer-reveal img:first-child {
-  height: auto;
-}
-.beer-range {
-  -webkit-appearance: slider-horizontal !important;
-  -moz-appearance: none;
-  bottom: 0;
-  cursor: pointer;
-  height: 100%;
-  left: -1px;
-  margin: 0;
-  opacity: 0;
-  position: absolute;
-  top: 0;
-  -ms-touch-action: auto;
-  touch-action: auto;
-  width: calc(100% + 2px);
-  z-index: 2;
-}
-.beer-range:focus ~ .beer-handle {
-  background: rgba(255, 255, 255, 0.85);
-  box-shadow: 0 0 3px rgba(0, 0, 0, 0.4);
-}
-.beer-range::-webkit-slider-thumb {
-  height: 300vh;
-  -webkit-appearance: none;
-}
-.beer-range::-moz-range-thumb {
-  height: 300vh;
-  -webkit-appearance: none;
-}
-.beer-range::-ms-tooltip {
-  display: none;
-}
-.beer-handle {
-  background: rgba(255, 255, 255, 0.5);
-  border-radius: 50%;
-  box-shadow: 0 0 6px rgba(0, 0, 0, 0);
-  color: #000;
-  height: 48px;
-  left: 50%;
-  opacity: 0;
-  pointer-events: none;
-  position: absolute;
-  top: 50%;
-  transform: translate3d(-50%, -50%, 0);
-  transition: background 0.3s, box-shadow 0.3s, opacity 0.5s 0.25s;
-  width: 48px;
-  z-index: 2;
-}
-.beer-handle:before,
-.beer-handle:after {
-  border-left: solid 2px;
-  border-top: solid 2px;
-  content: "";
-  height: 10px;
-  position: absolute;
-  top: 50%;
-  transform-origin: 0 0;
-  width: 10px;
-}
-.beer-handle:before {
-  left: 10px;
-  transform: rotate(-45deg);
-}
-.beer-handle:after {
-  right: 0;
-  transform: rotate(135deg);
-}
-.beer-slider[data-beer-label]:after,
-.beer-reveal[data-beer-label]:after {
-  background: rgba(255, 255, 255, 0.75);
-  border-radius: 4px;
-  content: attr(data-beer-label);
-  font-size: 12px;
-  line-height: 1;
-  padding: 6px;
-  position: absolute;
-  top: 10px;
-}
-.beer-slider[data-beer-label]:after {
-  right: 10px;
-}
-.beer-reveal[data-beer-label]:after {
-  left: 10px;
-}
-.beer-slider[data-beer-label=""]:after,
-.beer-reveal[data-beer-label=""]:after {
-  content: none;
-}
-.beer-ready .beer-reveal,
-.beer-ready .beer-handle {
-  opacity: 1;
-}
 
 /*first product details page (chair)*/
 .section-fluid-main {
@@ -993,28 +863,22 @@ Underline:hover{
   display: block;
 }
 
-[type="radio"]:checked,
-[type="radio"]:not(:checked) {
-  position: absolute;
-  visibility: hidden;
-}
+
 .color-btn:checked + label,
 .color-btn:not(:checked) + label {
   position: relative;
-  height: 40px;
+  height: 42px;
   transition: all 200ms linear;
-  border-radius: 4px;
-  width: 40px;
+  border-radius: 10px;
+  width: 42px;
   overflow: hidden;
   border: none;
   cursor: pointer;
   color: #ffeba7;
-  margin-right: 10px;
-  box-shadow: 0 12px 35px 0 rgba(16, 39, 112, 0.25);
+  margin-right: 2px;
   z-index: 10;
   background-position: center;
   background-size: cover;
-  border: 3px solid transparent;
 }
 .color-btn:checked + label {
   border-color: #434343;
@@ -1058,42 +922,36 @@ label.color-6 {
 }
 .for-color-1:checked ~ .img-wrap.chair-1 {
   opacity: 1;
-  animation: shake 0.7s cubic-bezier(0.36, 0.07, 0.19, 0.97) both;
 }
 .img-wrap.chair-2 {
   background-image: url(/img/producttable2.png);
 }
 .for-color-2:checked ~ .img-wrap.chair-2 {
   opacity: 1;
-  animation: shake 0.7s cubic-bezier(0.36, 0.07, 0.19, 0.97) both;
 }
 .img-wrap.chair-3 {
   background-image: url(/img/producttable3.png);
 }
 .for-color-3:checked ~ .img-wrap.chair-3 {
   opacity: 1;
-  animation: shake 0.7s cubic-bezier(0.36, 0.07, 0.19, 0.97) both;
 }
 .img-wrap.chair-4 {
   background-image: url(/img/producttable4.png);
 }
 .for-color-4:checked ~ .img-wrap.chair-4 {
   opacity: 1;
-  animation: shake 0.7s cubic-bezier(0.36, 0.07, 0.19, 0.97) both;
 }
 .img-wrap.chair-5 {
   background-image: url(/img/producttable5.png);
 }
 .for-color-5:checked ~ .img-wrap.chair-5 {
   opacity: 1;
-  animation: shake 0.7s cubic-bezier(0.36, 0.07, 0.19, 0.97) both;
 }
 .img-wrap.chair-6 {
   background-image: url(/img/producttable6.png);
 }
 .for-color-6:checked ~ .img-wrap.chair-6 {
   opacity: 1;
-  animation: shake 0.7s cubic-bezier(0.36, 0.07, 0.19, 0.97) both;
 }
 @keyframes shake {
   10%,
@@ -1249,7 +1107,7 @@ h5 {
   border: none;
   cursor: pointer;
   overflow: hidden;
-  background-color: transparent;
+  background-color: #14559c;
   color: #fff;
   box-shadow: 0 6px 15px 0 rgba(16, 39, 112, 0.15);
   transition: all 250ms linear;
@@ -1275,7 +1133,7 @@ h5 {
 }
 .btn:hover {
   box-shadow: 0 12px 35px 0 rgba(16, 38, 112, 0.138);
-  background-color: rgba(0, 0, 0, 0.428);
+  background-color: rgb(0, 0, 0);
   color: #ffffff;
 }
 .for-color-2:checked ~ .info-wrap .btn:before {
@@ -1542,60 +1400,6 @@ ol, ul {
 
 
 
-
-/*as seen in*/
-@-webkit-keyframes scroll {
-0% {
-  transform: translateX(0);
-}
-100% {
-  transform: translateX(calc(-250px * 5));
-}
-}
-
-@keyframes scroll {
-0% {
-  transform: translateX(0);
-}
-100% {
-  transform: translateX(calc(-250px * 5));
-}
-}
-.slider {
-height: 50px;
-margin: auto;
-overflow: hidden;
-position: relative;
-width: 100%;
-}
-
-.slider::before, .slider::after {
-content: "";
-height: 100px;
-position: absolute;
-width: 200px;
-z-index: 2;
-}
-.slider::after {
-right: 0;
-top: 0;
-transform: rotateZ(180deg);
-}
-.slider::before {
-left: 0;
-top: 0;
-}
-.slider .slide-track {
-animation: scroll 120s linear infinite;
-display: flex;
-width: calc(1000px * 5);
-}
-.slider .slide {
-height: 100px;
-width: 250px;
-}
-
-
 /*FAQ*/
 .faq-container {
 margin: 0 auto;
@@ -1702,7 +1506,7 @@ video {
   position: fixed;
   inset: 0;
   z-index: 998;
-  background-color: #000;
+  background-color: #212121;
   display: none;
 }
 
@@ -1710,7 +1514,7 @@ video {
 .card{
   position: relative;
   width: 350px;
-  height: 350px;
+  height: 300px;
   color: #03327d;
   background: url(./bg.jpg)
   center no-repeat;
@@ -1748,6 +1552,7 @@ video {
 .card__title{
   color: black;
   line-height: 15px;
+  font-size: large;
 }
 
 .card_subtitle{
@@ -1778,7 +1583,7 @@ video {
   color: rgb(0, 0, 0);
   background: none;
   border: none;
-  padding: 12px 18px;
+  padding: 7px 7px;
   position: relative;
 }
 
@@ -1787,11 +1592,11 @@ video {
   position: absolute;
   top: 50%;
   transform: translateY(-50%)
-  translateX(calc(100% + 4px));
-  width: 49px;
-  height: 45px;
+  translateX(calc(100% + 67px));
+  width: 75px;
+  height: 25px;
   background-color: #ff0000f2;
-  border-radius: 50px;
+  border-radius: 8px;
   transition: tranform .25s .25s
   cubic-bezier(0,0,.5,2), width .25s cubic-bezier(0,0,.5,2);
   z-index: -1;
@@ -1800,7 +1605,7 @@ video {
 .cta:hover::before{
   width: 100%;
   transform: translateY(-50%)
-  translateX(-18px);
+  translateX(-7px);
   transition: transform .25s
   cubic-bezier(0,0,.5,2), 
   width .25s .25s cubic-bezier(0,0,.5,2);
@@ -1932,4 +1737,185 @@ img:hover {
 .imageContainers > img:hover {
   width: 200px;
   height: 200px;
+}
+
+.img-wrap.chair-1 {
+  transition:transform 0.25s ease;
+}
+
+.img-wrap.chair-1:hover {
+  -webkit-transform:scale(1.05); /* or some other value */
+  transform:scale(1.05);
+}
+
+.imageContainers > .img-wrap.chair-1:hover {
+  width: 750px;
+  height: 750px;
+}
+
+
+html {
+  box-sizing: border-box;
+  font-size: 75%;
+  height: 100%;
+  -webkit-font-smoothing: subpixel-antialiased;
+  -moz-osx-font-smoothing: auto;
+}
+@media screen and (min-width: 768px) {
+  html {
+    font-size: 87.5%;
+  }
+}
+@media screen and (min-width: 1200px) {
+  html {
+    font-size: 100%;
+  }
+}
+
+
+.main-visual {
+  display: grid;
+  grid-template-columns: repeat(12, 1fr);
+  grid-template-rows: 1fr;
+  height: 100%;
+  min-height: 480px;
+  
+}
+@media screen and (min-width: 768px) {
+  .main-visual {
+    min-height: 560px;
+    padding: 40px 0;
+  }
+}
+
+.main-visual__title,
+.main-visual__dummy-text {
+  align-self: center;
+  font-family: Cinzel, serif;
+  font-size: min(5.2vw, 20px);
+  font-weight: normal;
+  grid-row: 1;
+  line-height: 1.5;
+  position: relative;
+  
+}
+@media screen and (min-width: 768px) {
+  .main-visual__title,
+.main-visual__dummy-text {
+    font-size: min(3.125vw, 72px);
+  }
+}
+
+.main-visual__title {
+  color: var(--white-color-primary);
+  grid-column: 2/12;
+  margin: 0;
+  z-index:2; 
+  top: 16px;
+}
+
+.main-visual__dummy-text {
+  color: var(--color-base);
+  grid-column: 2/4;
+  overflow: hidden;
+  z-index: -1;
+}
+.main-visual__dummy-text > * {
+  width: 100vw;
+}
+@media screen and (min-width: 768px) {
+  .main-visual__dummy-text {
+    z-index: 3;
+  }
+}
+
+.main-visual__background {
+  background-color: var(--base-color);
+  grid-column: 1/13;
+  grid-row: 1;
+  overflow: hidden;
+  z-index: 1;
+  border-radius: 20px;
+  background-color: #f1f5f8;
+  border: 6px solid #f1f5f8;
+  box-shadow: 5px 5px 10px #dedfdf, -5px -5px 10px #ffffff;
+  height: fit-content;
+}
+@media screen and (min-width: 768px) {
+  .main-visual__background {
+    grid-column: 4/13;
+  }
+}
+
+.main-visual__background-slider {
+  height: 100%;
+  transition: opacity 0.5s;
+  width: 100%;
+}
+.main-visual__background-slider[data-loaded=false] {
+  opacity: 0;
+  visibility: hidden;
+}
+
+.main-visual__background-slider-item {
+  overflow: hidden;
+  position: relative;
+}
+.main-visual__background-slider-item::after {
+  background-color: rgba(0, 0, 0, 0.3);
+  content: "";
+  height: 100%;
+  left: 0;
+  position: absolute;
+  top: 0;
+  width: 100%;
+}
+
+.main-visual__background-slider-image {
+  height: 100%;
+  left: 0;
+  -o-object-fit: cover;
+     object-fit: cover;
+  position: absolute;
+  top: 0;
+  width: 100%;
+  z-index: -1;
+}
+
+.background-slider__pagination {
+  bottom: 0;
+}
+.background-slider__pagination > .swiper-pagination-bullet {
+  background-color: transparent;
+  border-radius: 0;
+  height: 8px;
+  opacity: 1;
+  position: relative;
+  width: 8px;
+}
+.background-slider__pagination > .swiper-pagination-bullet::after {
+  background-color: var(--gray-color-secondary);
+  bottom: 0;
+  content: "";
+  display: inline-block;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  transform: scaleY(0.2);
+  transform-origin: bottom;
+  transition: transform 0.3s;
+  width: 100%;
+}
+.background-slider__pagination > .swiper-pagination-bullet.swiper-pagination-bullet-active::after {
+  transform: scaleY(1);
+}
+@media screen and (min-width: 1400px) {
+  .background-slider__pagination > .swiper-pagination-bullet {
+    height: 10px;
+    width: 10px;
+  }
+}
+
+.js-focus-visible :focus:not(.focus-visible) {
+  outline: 0;
 }
