--- a/css/style.css
+++ b/css/style.css
@@ -28,7 +28,7 @@ NEW PAGE START
 .header .navbar .brand {
   font-family: inherit;
   font-size: 1.75rem;
-  font-weight: 700;
+  font-weight: 600;
   line-height: inherit;
   text-transform: uppercase;
   color: #ffffff;
@@ -590,7 +590,6 @@ section h3.section-subheading {
 section#contact {
   background-color: #222;
   background-image: url(/img/contactus.jpeg);
-  background-position: center;
   background-position: center;
   
 }
@@ -1918,4 +1917,28 @@ html {
 
 .js-focus-visible :focus:not(.focus-visible) {
   outline: 0;
+}
+
+
+.page-header .page-header-image {
+  position: absolute;
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center center;
+  width: 100%;
+  height: 100%;
+  z-index: 0;
+}
+
+.page-header .container > .content-center {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center;
+  padding: 0 15px;
+  color: #ffffff;
+  width: 100%;
+  max-width: 880px;
+  justify-content: center;
 }
